Add DSMF/DTMF configuration model
