# src/dsmf/server/dsmf_server/models/__init__.py
@@ -1,6 +1,11 @@
 # coding: utf-8
 
 # import models into model package
+from dsmf_server.models.connection_configuration import ConnectionConfiguration
+from dsmf_server.models.controller_configuration import ControllerConfiguration
+from dsmf_server.models.device_configuration import DeviceConfiguration
 from dsmf_server.models.endpoint import Endpoint
+from dsmf_server.models.network_border_configuration import NetworkBorderConfiguration
+from dsmf_server.models.service_configuration import ServiceConfiguration
 from dsmf_server.models.slice import Slice
 from dsmf_server.models.tunnel import Tunnel
